--- a/style.css
+++ b/style.css
@@ -146,5 +146,29 @@ h1 {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 66%;
+    width: 70%;
+}
+
+@media only screen and (max-width: 1700px) {
+    #frog {
+        width: 74%;
+    }
+}
+
+@media only screen and (max-width: 1450px) {
+    #frog {
+        width: 78%;
+    }
+}
+
+@media only screen and (max-width: 1200px) {
+    #frog {
+        width: 78%;
+    }
+}
+
+@media only screen and (max-width: 800px) {
+    #frog {
+        width: 84%;
+    }
 }
