--- a/style.css
+++ b/style.css
@@ -76,6 +76,7 @@ h1 {
     margin-top: 1rem;
 }
 
+
 .info h2 {
     font-size: 2rem;
 }
@@ -87,6 +88,7 @@ h1 {
 
 #aboutMe img {
     border-radius: 1.5rem;
+    width: 30%;
 }
 
 #projects {
@@ -99,7 +101,8 @@ h1 {
 }
 
 #projects ul {
-    list-style: circle;
+    list-style: none;
+    line-height: 1.4;
 }
 
 #projects li {
@@ -140,6 +143,7 @@ h1 {
 
 .frog {
     margin-top: 4rem;
+    margin-bottom: 1rem;
 }
 
 #frog {
