--- a/style.css
+++ b/style.css
@@ -141,6 +141,11 @@ h1 {
     cursor: pointer;
 }
 
+@keyframes boop {
+    from {margin-top: 3rem;}
+    to {margin-top: 1.35rem;}
+}
+
 .message {
     font-size: 1.3rem;
     color: rgb(24, 24, 70);
@@ -149,6 +154,8 @@ h1 {
     border-radius: 3rem;
     padding: 0.5rem 1rem;
     text-shadow: 1px 1px 1px rgb(174, 174, 185);
+    animation-name: boop;
+    animation-duration: 0.15s;
 }
 
 .frog {
