--- a/style.css
+++ b/style.css
@@ -8,31 +8,43 @@ body {
     margin-left: 30rem;
 }
 
-@media only screen and (max-width: 1700px) {
-    body {
-        margin-right: 25rem;
-        margin-left: 25rem;
-    }
-}
-
-@media only screen and (max-width: 1450px) {
+@media only screen and (max-width: 1500px) {
     body {
         margin-right: 18rem;
         margin-left: 18rem;
     }
 }
 
-@media only screen and (max-width: 1200px) {
+@media only screen and (max-width: 1250px) {
+    body {
+        margin-right: 12rem;
+        margin-left: 12rem;
+    }
+    html {
+        font-size: 14px;
+    }
+}
+
+@media only screen and (max-width: 1000px) {
     body {
         margin-right: 5rem;
         margin-left: 5rem;
     }
+    html {
+        font-size: 12px;
+    }
 }
 
-@media only screen and (max-width: 800px) {
+@media only screen and (max-width: 600px) {
     body {
         margin-right: 1rem;
         margin-left: 1rem;
+    }
+    html {
+        font-size: 10px;
+    }
+    #aboutMe img {
+        height: 25%;
     }
 }
 
@@ -168,6 +180,7 @@ h1 {
     margin-left: auto;
     margin-right: auto;
     width: 70%;
+    border-radius: 0.7rem;
 }
 
 @media only screen and (max-width: 1700px) {
